[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/entity/Game_objects/Obj_bonus_room.gd" type="Script" id=1]
[ext_resource path="res://nodes/misc/GameCamera_Bounds.tscn" type="PackedScene" id=2]

[node name="bonus_room" type="ReferenceRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1880.0
margin_bottom = -1040.0
script = ExtResource( 1 )

[node name="Spawn_Point" type="Position2D" parent="."]

[node name="Camera_Bounds" parent="." instance=ExtResource( 2 )]

[node name="Fail_Zone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="Item_Holder" type="Node2D" parent="."]

[connection signal="body_entered" from="Fail_Zone" to="." method="fail_bonus"]
